get pokemon api

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
-<app-generations></app-generations>
-<app-pokemons></app-pokemons>
+<app-header></app-header>
+
+<div class="main">
+  <app-generations></app-generations>
+  <app-pokemons></app-pokemons>
+  <app-pokemon-list></app-pokemon-list>
+</div>
 
 <router-outlet></router-outlet>
