try to display abilities

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,20 +1,22 @@
+@import url("https://fonts.googleapis.com/css2?family=Itim&family=Noto+Serif+JP&family=Rubik&display=swap");
+
 .main {
-    width: 800px;
-    margin: 0 auto;
+  width: 800px;
+  margin: 0 auto;
 }
 
 .total-pokemons {
-    margin: 1rem 0;
-    opacity: 0.7;
+  margin: 1rem 0;
+  opacity: 0.7;
 }
 
 .card span {
-    font-weight: 600;
+  font-weight: 600;
 }
 
 .id-pokemon {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    opacity: 0.4;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  opacity: 0.4;
 }
