--- a/src/app/components/pokemon-list/pokemon-list.component.html
+++ b/src/app/components/pokemon-list/pokemon-list.component.html
@@ -19,13 +19,16 @@
     <div class="p-5">
       <a href="#">
         <h5
-          class="mb-2 text-2xl font-bold tracking-tight text-red-600 dark:text-white"
+          class="mb-2 text-2xl font-bold tracking-tight text-green-600 dark:text-white pok-name"
         >
-          {{ pok.name }}
+          {{ pok.name | titlecase }}
         </h5>
       </a>
+
+      <h5 class="font-japonais">{{ pok.name | titlecase }}( afficher avec une font japonaise )</h5>
+
       <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
-        <span>Catégorie: </span>{{ pok.categorie }}
+        <!-- <span>Catégorie: </span>{{ pok.generation.name }} -->
       </p>
       <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
         <span>Espèce: </span> {{ pok.species.name }}
